# autobids-globus

./: README.md  alembic.ini  compose.yaml  globus.py  pyproject.toml  requirements.txt
.github/workflows/: update.yml
alembic/: env.py
alembic/versions/: 87575c790c2d_create_initial_tables.py  ec30e7f514de_add_dataset_type_column.py
globusautobids/: globus.py  models.py
